--- a/Snake3D/Snake3D.vcxproj
+++ b/Snake3D/Snake3D.vcxproj
@@ -147,12 +147,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="SnakeBody.cpp" />
     <ClCompile Include="Snake3D.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="SnakeBody.h" />
     <ClInclude Include="Snake3D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
