--- a/Snake3D/Snake3D.vcxproj.filters
+++ b/Snake3D/Snake3D.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClCompile Include="Snake3D.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SnakeBody.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Snake3D.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SnakeBody.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
